service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-app
spec:
  selector:
    app: mobile-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
